# nsql.vim

./: .env  README.md  dev-requirements.txt  example.sql  plugin.py  requirements.txt  setup.cfg
doc/: nsql.txt
initdb.d/: init.sql
